--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,12 @@
     "default_popup": "index.html",
     "default_title": "Auto fill"
   },
+  "icons": {
+    "16": "icon16.png",
+    "32" : "icon32.png",
+    "48" : "icon48.png",
+    "128" : "icon128.png"
+  },
   "content_scripts": [
     {
       "matches": ["https://harmony.synel.co.il/*"],
